<resources>
    <string name="app_name">RunAge</string>

    <string name="runage_continue">Continue</string>
    <string name="explanation_permission_location">In order for us to be able to track your Run, we need to be able to access your location.</string>
    <string name="explanation_permission_activity">Detecting your physical activity is important for knowing when you are running, walking etc. You will ony get experience points from Running.</string>
    <string name="permission_location">Location tracking</string>
    <string name="permission_activity">Physical activity</string>
    <string name="get_started">Get started</string>
    <string name="runage_settings">Settings</string>
    <string name="unit_type">Unit type</string>
    <string name="metric">Metric (km, kg)</string>
    <string name="imperial">Imperial (mi, lb)</string>
    <string name="runage_passed_info">Checkpoint completed.</string>
    <string name="runage_challenge_completed_info">Congratulations, you have completed the challenge. Keep running for extra experience points.</string>
    <string name="kilometer">kilometer</string>
    <string name="miles">miles</string>
    <string name="signin_other_error">Failed to sign in</string>
    <string name="runage_calories">calories</string>
    <string name="runage_distance">Distance</string>
    <string name="runage_welcome_back">Welcome back</string>
    <string name="runage_calories_burned">Calories burned</string>
    <string name="runage_duration">Duration</string>
    <string name="runage_hour">hour</string>
    <string name="runage_hours">hours</string>
    <string name="runage_minute">minute</string>
    <string name="runage_minutes">minutes</string>
    <string name="runage_second">second</string>
    <string name="runage_seconds">seconds</string>
    <string name="kilometers">kilometers</string>
    <string name="mile">mile</string>
    <string name="runage_pace">Pace</string>
    <string name="runage_avg_pace">Avg. Pace</string>
    <string name="runage_close">Close</string>
    <string name="runage_quest_completed">Run completed</string>
    <string name="runage_quest_failed">Run failed</string>
    <string name="runage_completed_runs">Completed Runs</string>
    <string name="runage_no_completed_runs">No completed runs</string>
    <string name="runage_running">Running</string>
    <string name="runage_walking">Walking</string>
    <string name="runage_driving">Driving</string>
    <string name="runage_bicycling">Bicycling</string>
    <string name="runage_still">Still</string>
    <string name="runage_level">Level</string>
    <string name="runage_leaderboards">Leaderboards</string>
    <string name="runage_achievements">Achievements</string>
    <string name="runage_sign_out">Sign out</string>
    <string name="runage_your_weight">Your weight</string>
    <string name="runage_summary">Summary</string>
    <string name="runage_min_km">min/km</string>
    <string name="runage_min_mi">min/mi</string>
    <string name="runage_km">km</string>
    <string name="runage_mi">mi</string>
    <string name="runage_empty_timer" translatable="false">00:00:00</string>
    <string name="runage_rules">Rules</string>
    <string name="runage_delete_run">Delete Run</string>
    <string name="runage_activity_time_spent_on">Activity time spent on:</string>
    <string name="runage_experience_gained">Experience gained:</string>
    <string name="runage_xp">XP</string>
    <string name="runage_save_quest_failed_title">Failed to save run!</string>
    <string name="runage_save_quest_failed_message">Check your connection and try again.</string>
    <string name="runage_ok">OK</string>
    <string name="runage_no">No</string>
    <string name="runage_yes">Yes</string>
    <string name="runage_delete_run_title">Delete Run</string>
    <string name="runage_delete_run_message">Are you sure you want to delete this run?</string>
    <string name="runage_rule_1_title">Only Running Counts</string>
    <string name="runage_rule_1_message">"You will only get experience points from Running. Walking, riding a bicycle, or even taking a ride with your car will get you nothing. Running is also the only thing that will unlock achievements and let you climb the leaderboards. With that said, it is okay to walk during a run, but don’t expect to get rewarded for it. "</string>
    <string name="runage_rule_2_title">Run faster</string>
    <string name="runage_rule_2_message">"The faster you run, the more experience points you will gain. But again remember, doing an activity type other than running will give you the opposite results. "</string>
    <string name="runage_rule_3_title">Run further</string>
    <string name="runage_rule_3_message">Only distance and pace determine your experience points gain. The further you run, and the faster you do it, the more you will gain.</string>
    <string name="runage_edit_profile">Edit profile</string>
    <string name="runage_save_run">Save Run</string>
    <string name="runage_sync_google_fit">Sync with Google Fit</string>
    <string name="runage_unexpected_error">Unexpected error</string>
    <string name="runage_normal">Normal</string>
    <string name="runage_satellite">Satellite</string>
    <string name="runage_terrain">Terrain</string>
    <string name="runage_share_this_run">Share this quest</string>
    <string name="runage_support">Support</string>
    <string name="runage_begin_new_run">Begin new run</string>
    <string name="runage_feed">Feed</string>
    <string name="runage_target_distance">Target distance:</string>
    <string name="runage_duration_title">Complete in:</string>
    <string name="runage_reward">Reward:</string>
    <string name="runage_start">Start</string>
    <string name="runage_challenges">Challenges</string>
    <string name="runage_start_running">Start Running</string>
    <string name="runage_challenge">Challenge</string>
    <string name="runage_start_challenge">Start challenge</string>
    <string name="runage_stop_run">Stop run</string>
    <string name="runage_challenge_failed">Challenge failed</string>
    <string name="runage_challenge_failed_first">Challenge failed. With your current pace you were</string>
    <string name="runage_challenge_failed_ending">seconds behind the target. Keep running to gain some more experience points and then try again.</string>
    <string name="runage_run_completed">Run completed</string>
    <string name="runage_challenge_completed">Challenge completed</string>
    <string name="runage_reward_claimed">Reward claimed</string>
    <string name="runage_cheating_detected">Cheating detected</string>
    <string name="runage_activity">Activity</string>
    <string name="runage_time_limit">Time limit:</string>
    <string name="runage_run_failed">Run failed</string>
    <string name="runage_run_started">Run started</string>
    <string name="runage_email_us">Email us</string>
    <string name="runage_contact_us_info">If you have any problems, questions, or feature requests, please, feel free to reach out to us! Send an email by clicking the button below.</string>
    <string name="runage_send_email">Send email...</string>
    <string name="runage_background_info">Also, some users experience that the app is killed while in the background. This can be prevented. Click on the button below to understand how.</string>
    <string name="runage_open_help_pages">Get info</string>
    <string name="runage_are_you_happy">Is RunAge living up to your expectations?</string>
    <string name="runage_hi_there">Hi there!</string>
    <string name="runage_happy_to_hear_it">Happy to hear it!</string>
    <string name="runage_rate_us">We would love if you could rate us in Google Play?</string>
    <string name="runage_sure">Sure!</string>
    <string name="runage_later">Later</string>
    <string name="runage_sorry_to_hear_that">Sorry to hear that!</string>
    <string name="runage_would_you_like_feedback">Would you like to give us some feedback to help us improve?</string>
    <string name="runage_challenge_started">Challenge started</string>
    <string name="runage_running_percentage">Running %</string>
    <string name="runage_time">Time</string>
    <string name="runage_all">All</string>
    <string name="runage_my">My</string>
    <string name="runage_following">Following</string>
    <string name="runage_mine">Mine</string>
    <string name="runage_follow_user">Follow player</string>
    <string name="runage_unknown_player">Unknown player</string>
    <string name="runage_you_are_not_following">You are not following anyone yet</string>
    <string name="runage_player_challenge">Player Challenge</string>
    <string name="runage_follow_player">Follow Player</string>
    <string name="runage_time_to_beat">Time to beat</string>
    <string name="runage_distance_to_complete">Distance to complete</string>
    <string name="runage_challenge_player">Challenge Player</string>
    <string name="runage_unfollow_player">Unfollow player</string>
    <string name="runage_reward_for_a_win">Reward for a win:</string>
    <string name="runage_penalty_for_loosing">Penalty for a loss:</string>
    <string name="runage_stil_get_running_xp">The reward XP is on top of the regular XP you get by running. Keep running after the challenge is completed to earn a lot of extra XP!</string>
    <string name="runage_crush_this_players_time">Crush this players time?</string>
    <string name="runage_total_experience_gained">Total experience gained:</string>
    <string name="runage_challenge_failed_penalty">Challenge failed penalty:</string>
    <string name="runage_profile">Profile</string>
    <string name="runage_player_profile">Player Profile</string>
    <string name="runage_total_running_distance">Total running distance</string>
    <string name="runage_total_running_duration">Total running duraton</string>
    <string name="runage_total_experience">Total experience</string>
    <string name="runage_login_failed">Login failed</string>
    <string name="runage_followers">Followers</string>
    <string name="runage_total_runs">Total runs</string>
    <string name="runage_challenge_stars">Challenge stars</string>
    <string name="runage_view_profile">View profile</string>
    <string name="runage_play_music">Play Music</string>
    <string name="runage_claim_reward">Claim reward</string>
    <string name="runage_reward_info">Daily reward:</string>
    <string name="runage_im_good">No thanks, not today</string>
    <string name="runage_100_xp" translatable="false">100 XP</string>
    <string name="runage_save_xp">Save XP</string>
    <string name="runage_congrats_xp">Congratulations, you gained:</string>
    <string name="runage_congrats_level_up">Congratulations, you have reached level</string>
    <string name="runage_search">Search</string>
    <string name="runage_ad">Ad</string>
    <string name="runage_edit_profile_info">"You can edit your profile image and name in the Google Play Games app that you have installed. "</string>
</resources>
