<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainNavigation"
            android:icon="@drawable/ic_run_blue"
            android:title="@string/runage_start" />
    </group>

    <group
        android:id="@+id/grp_4"
        android:checkableBehavior="none">

        <item
            android:id="@+id/leaderboard"
            android:icon="@drawable/ic_trophy"
            android:title="@string/runage_leaderboards" />
    </group>

    <group
        android:id="@+id/grp_5"
        android:checkableBehavior="none">

        <item
            android:id="@+id/achievementNavigation"
            android:icon="@drawable/ic_achievement"
            android:title="@string/runage_achievements" />
    </group>

    <group
        android:id="@+id/grp_6"
        android:checkableBehavior="single">

        <item
            android:id="@+id/appRulesNavigation"
            android:icon="@drawable/ic_book"
            android:title="@string/runage_rules" />
    </group>

    <group
        android:id="@+id/grp_3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/appSettingsNavigation"
            android:icon="@drawable/ic_settings"
            android:title="@string/runage_settings" />
    </group>


</menu>