<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="xevenition.com.runage.fragment.appsettings.AppSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/Theme.Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/runage_settings"
            app:titleTextAppearance="@style/TextAppearance.ToolbarTitle"
            app:titleTextColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:layout_marginEnd="@dimen/margin_basic"
            android:hint="@string/runage_your_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:startIconDrawable="@drawable/ic_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textWeightField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textUnitTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:fontFamily="@font/bold"
            android:text="@string/unit_type"
            android:textSize="@dimen/textSizeBig"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWeight" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_basic"
            android:layout_marginTop="@dimen/margin_basic"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUnitTitle">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="@{()-> viewModel.onMetricClicked()}"
                android:text="@string/metric" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewModel.onImperialClicked()}"
                android:text="@string/imperial" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:fontFamily="@font/medium"
            android:layout_margin="@dimen/margin_basic"
            android:onClick="@{()->viewModel.onProfileClicked()}"
            android:text="@string/runage_edit_profile"
            app:icon="@drawable/ic_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageGoogleFit"
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/ic_google_fit"
            android:layout_margin="@dimen/margin_basic"
            app:layout_constraintTop_toBottomOf="@+id/buttonProfile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchFit"
            android:text="@string/runage_sync_google_fit"
            android:layout_width="wrap_content"
            android:checked="@{viewModel.liveSyncGoogleFit}"
            app:layout_constraintStart_toEndOf="@+id/imageGoogleFit"
            android:fontFamily="@font/medium"
            android:layout_marginStart="8dip"
            app:layout_constraintTop_toTopOf="@+id/imageGoogleFit"
            app:layout_constraintBottom_toBottomOf="@+id/imageGoogleFit"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/ButtonStyleDestructive"
            android:onClick="@{()-> viewModel.onSignOutClicked()}"
            android:text="@string/runage_sign_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>